--- a/Styles/home.css
+++ b/Styles/home.css
@@ -1,7 +1,8 @@
-.home{
+#home{
     display: flex;
     min-height: calc(100vh - 91px);
     position: relative;
+    justify-content: space-between;
 }
 .cta{
     width: 35%;
@@ -34,5 +35,24 @@
     padding: 8px 14px;
     font-weight: 500;
     border-radius: 12px;
-    box-shadow: 0px 0px 12px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 12px 4px rgba(0, 0, 0, 0.1); /*alpha significa a transparencia da sombra*/
+}
+.banner{
+    display: flex;
+    width: 50%;
+    z-index: 2; /*se encontra na segunda camada*/
+    align-items: center;
+}
+.banner img{
+    height: 500px;
+}
+.shape{
+    background-color: var(--color-primary-3);
+    height: 100%;
+    width: 50%;
+    position: absolute;
+    border-radius: 70% 55% 70% 50%;
+    top: 0;
+    right: 0;
+    z-index: 1;
 }
