--- a/Styles/style.css
+++ b/Styles/style.css
@@ -2,13 +2,14 @@
 
 @import url('menu.css');
 @import url('home.css');
+@import url('cardapio.css');
 :root{
-    --color-primary-1: #fff9ea;
-    --color-primary-2: #fff8b4;
-    --color-primary-3: #f8d477;
-    --color-primary-4: #ffe100;
-    --color-primary-5: #ffcb45;
-    --color-primary-6: #e9a209;
+    --color-primary-1: #cfe0bc;
+    --color-primary-2: #99CD85;
+    --color-primary-3: #7fa653;
+    --color-primary-4: #63783d;
+    --color-primary-5: #3d631f;
+    --color-primary-6: #244c26;
 
     --color-neutra-0:#fff;
     --color-neutra-1:#1d1d1d;
@@ -42,4 +43,24 @@ a{
 }
 .btn-padrao:hover{
     background-color: var(--color-primary-3);
+}
+.social-media-buttons{
+    display: flex;
+    gap: 18px; /*espaca*/
+}
+.social-media-buttons a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 45px;
+    height: 40px;
+    background-color: var(--color-neutra-0);
+    font-size: 1.2rem;
+    border-radius: 10px;
+    color: var(--color-neutra-1);
+    box-shadow: 0px 0px 12px 4px rgba(0, 0, 0, 0.1);
+    transition: box-shadow 0.3 ease;
+}
+.social-media-buttons a:hover{
+    box-shadow: 0px 0px 12px 4px rgba(72, 155, 8, 0.7);
 }
