--- a/Styles/cardapio.css
+++ b/Styles/cardapio.css
@@ -5,7 +5,7 @@
     justify-content: center;
     min-height: 100vh;
 }
-area-cards{
+.area-cards{
     width: 100%;
     display: flex;
     flex-wrap: wrap;  /*quebra automatica do conteudo para a proxima linha*/
@@ -24,9 +24,11 @@ area-cards{
     box-shadow: 0px 0px 12px 4px rgba(0, 0, 0, 0.1);
     position: relative;
     width: 30%;
+    height: 470px;
 }
 .card-image{
     width: 60%;
+    height: 60%;
 }
 .card-heart{
     position: absolute;
@@ -35,10 +37,30 @@ area-cards{
     align-items: center;
     justify-content: center;
     font-size: 1.563rem;
-    color: var(--color-neutra-1);
+    color: var(--color-neutra-0);
     width: 70px;
     height: 70px;
     right: -10px;
     top: -10px;
     border-radius: 0px 37.5px 0px 42.5px;
+}
+.card-heart:hover{ /* quando passa o cursor por cima, a cor muda*/
+    color: red;
+    cursor: pointer;
+}
+.card-title{
+    font-size: 1.4rem;
+}
+.card-descricao{
+    font-size: 0.8rem;
+    text-align: justify;
+}
+.card-rate i{
+    color: var(--color-primary-6);
+}
+.card-price{
+    display: flex;
+    align-items: center;
+    gap: 30px;
+    margin-top: 32px;
 }
