--- a/Styles/cardapio.css
+++ b/Styles/cardapio.css
@@ -23,8 +23,8 @@
     padding: 20px;
     box-shadow: 0px 0px 12px 4px rgba(0, 0, 0, 0.1);
     position: relative;
-    width: 30%;
-    height: 470px;
+    width: 300px;
+    height: 450px;
 }
 .card-image{
     width: 60%;
@@ -63,4 +63,9 @@
     align-items: center;
     gap: 30px;
     margin-top: 32px;
+}
+ @media screen and (max-width:1170px) { /*define a responsividade quando em tamanho */
+    .card{
+        width: 200px;
+    }
 }
