--- a/Styles/home.css
+++ b/Styles/home.css
@@ -40,6 +40,7 @@
 .banner{
     display: flex;
     width: 50%;
+    height: 100%;
     z-index: 2; /*se encontra na segunda camada*/
     align-items: center;
 }
@@ -51,8 +52,36 @@
     height: 100%;
     width: 50%;
     position: absolute;
-    border-radius: 70% 55% 70% 50%;
+    border-radius: 50% 100% 50% 50%;
     top: 0;
     right: 0;
     z-index: 1;
+}
+@media screen and (max-width:1170px ) {
+    .shape{
+        display: none;
+    }
+    #home{
+        flex-direction: column;
+        justify-content: center;
+    }
+    .banner img{
+        height: 15rem;
+    }
+    .cta-buttons{
+        flex-direction: column;
+    }
+    .cta{
+        width: 100%;
+        justify-content: center;
+        flex-direction: column;
+    }
+    .title{
+        font-size: 1.5rem;
+        text-align: center;
+    }
+    .descricao{
+        font-size: 1rem;
+        text-align: center;
+    }
 }
